Prevented 'Channel' title scrolling with the channel names
Removed title from the Information panel

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
   <nav-bar></nav-bar>
   <div class="w-100 h-100 d-flex justify-content-around">
     <div class="d-flex flex-column left-panel p-0 h-100">
-      <channel-selector class="h-50 p-2 scroll"></channel-selector>
-      <transformer-selector class="h-100 p-2 scroll"></transformer-selector>
+      <channel-selector class="h-50 p-2"></channel-selector>
+      <transformer-selector class="h-50 p-2"></transformer-selector>
     </div>
     <div class="p-0 h-100 middle-panel w-100">
       <div class="scroll" [style.height]="ladderDiagramHeightPercentString">
@@ -21,6 +21,6 @@
         <information class="w-100 p-2 scroll"></information>
       </div>
     </div>
-    <transformer-property-selector class="p-2 scroll right-panel"></transformer-property-selector>
+    <transformer-property-selector class="p-2 right-panel"></transformer-property-selector>
   </div>
 </div>
