--- a/src/app/widgets/channel-selector/channel-selector.component.scss
+++ b/src/app/widgets/channel-selector/channel-selector.component.scss
@@ -40,3 +40,13 @@ h4 {
     vertical-align: middle;
   }
 }
+
+.content {
+  height: 82%;
+  overflow-y: auto;
+}
+
+hr {
+  margin-top: .5rem;
+  margin-bottom: .5rem;
+}
