--- a/src/app/widgets/transformer-property-selector/transformer-property-selector.component.html
+++ b/src/app/widgets/transformer-property-selector/transformer-property-selector.component.html
@@ -1,41 +1,42 @@
 
-<h4>Properties</h4>
+<h4 class="unselectable">Properties</h4>
 <hr>
+<div class="content">
+  <div *ngFor="let transformerProperty of transformerProperties | async" class="w-100 container-fluid">
 
-<div *ngFor="let transformerProperty of transformerProperties | async" class="w-100 container-fluid">
+    <div class="row">
+      <i class="fa fa-question-circle mx-1" placement="left" ngbTooltip="{{transformerProperty.definition.description}}" container="body"></i>
+      <h6>{{transformerProperty.definition.name}}</h6>
+    </div>
 
-  <div class="row">
-    <i class="fa fa-question-circle mx-1" placement="left" ngbTooltip="{{transformerProperty.definition.description}}" container="body"></i>
-    <h6>{{transformerProperty.definition.name}}</h6>
+    <div *ngFor="let prop of transformerProperty.values" class="row">
+      <div *ngIf="transformerProperty.definition.repeated || transformerProperty.definition.optional" class="col-1 px-0 mr-2">
+        <input class="form-control" type="button" value="-" (click)="removePropertyValue(prop)">
+      </div>
+
+      <div class="col px-0" *ngIf="transformerProperty.definition.repeated"><input class="form-control" type="text" placeholder="Name" [ngModel]="prop.name | async" (ngModelChange)="prop.name.next($event)"/></div>
+      <div class="col px-0" [ngSwitch]="transformerProperty.definition.type" *ngIf="!transformerProperty.definition.validValues">
+        <input *ngSwitchCase="'string'" class="form-control" type="text" [ngModel]="prop.value | async" (ngModelChange)="prop.value.next($event)"/>
+        <input *ngSwitchCase="'decimal'" class="form-control" type="number" [ngModel]="prop.value | async" (ngModelChange)="prop.value.next($event)"/>
+        <input *ngSwitchCase="'integer'" class="form-control" type="number" [ngModel]="prop.value | async" (ngModelChange)="prop.value.next($event)"/>
+        <input *ngSwitchCase="'float'" class="form-control" type="number" [ngModel]="prop.value | async" (ngModelChange)="prop.value.next($event)"/>
+        <select *ngSwitchCase="'boolean'" class="form-control" [ngModel]="prop.value | async" (ngModelChange)="prop.value.next($event === 'true')">
+          <option value="true">True</option>
+          <option value="false">False</option>
+        </select>
+      </div>
+      <div class="col px-0" *ngIf="transformerProperty.definition.validValues">
+        <select class="form-control" [ngModel]="prop.value | async" (ngModelChange)="prop.value.next($event)">
+          <option *ngFor="let validValue of transformerProperty.definition.validValues" [value]="validValue" >{{validValue}}</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="row" *ngIf="transformerProperty.definition.repeated || (transformerProperty.definition.optional && transformerProperty.values.isEmpty())">
+      <div class="col-1 px-0 mr-2">
+        <input class="form-control" type="button" value="+" (click)="addPropertyValue(transformerProperty.definition)">
+      </div>
+    </div>
+
   </div>
-
-  <div *ngFor="let prop of transformerProperty.values" class="row">
-    <div *ngIf="transformerProperty.definition.repeated || transformerProperty.definition.optional" class="col-1 px-0 mr-2">
-      <input class="form-control" type="button" value="-" (click)="removePropertyValue(prop)">
-    </div>
-
-    <div class="col px-0" *ngIf="transformerProperty.definition.repeated"><input class="form-control" type="text" placeholder="Name" [ngModel]="prop.name | async" (ngModelChange)="prop.name.next($event)"/></div>
-    <div class="col px-0" [ngSwitch]="transformerProperty.definition.type" *ngIf="!transformerProperty.definition.validValues">
-      <input *ngSwitchCase="'string'" class="form-control" type="text" [ngModel]="prop.value | async" (ngModelChange)="prop.value.next($event)"/>
-      <input *ngSwitchCase="'decimal'" class="form-control" type="number" [ngModel]="prop.value | async" (ngModelChange)="prop.value.next($event)"/>
-      <input *ngSwitchCase="'integer'" class="form-control" type="number" [ngModel]="prop.value | async" (ngModelChange)="prop.value.next($event)"/>
-      <input *ngSwitchCase="'float'" class="form-control" type="number" [ngModel]="prop.value | async" (ngModelChange)="prop.value.next($event)"/>
-      <select *ngSwitchCase="'boolean'" class="form-control" [ngModel]="prop.value | async" (ngModelChange)="prop.value.next($event === 'true')">
-        <option value="true">True</option>
-        <option value="false">False</option>
-      </select>
-    </div>
-    <div class="col px-0" *ngIf="transformerProperty.definition.validValues">
-      <select class="form-control" [ngModel]="prop.value | async" (ngModelChange)="prop.value.next($event)">
-        <option *ngFor="let validValue of transformerProperty.definition.validValues" [value]="validValue" >{{validValue}}</option>
-      </select>
-    </div>
-  </div>
-
-  <div class="row" *ngIf="transformerProperty.definition.repeated || (transformerProperty.definition.optional && transformerProperty.values.isEmpty())">
-    <div class="col-1 px-0 mr-2">
-      <input class="form-control" type="button" value="+" (click)="addPropertyValue(transformerProperty.definition)">
-    </div>
-  </div>
-
 </div>
