--- a/src/app/widgets/information/information.component.html
+++ b/src/app/widgets/information/information.component.html
@@ -1,1 +1,5 @@
-<div [innerHTML]="transformerDocumentation | async"></div>
+<h4>Information</h4>
+<hr>
+<div class="content h-100">
+  <div [innerHTML]="transformerDocumentation | async"></div>
+</div>
