--- a/src/app/widgets/transformer-property-selector/transformer-property-selector.component.html
+++ b/src/app/widgets/transformer-property-selector/transformer-property-selector.component.html
@@ -1,7 +1,7 @@
 
 <h4 class="unselectable">Properties</h4>
 <hr>
-<div class="content">
+<div class="content h-100">
   <div *ngFor="let transformerProperty of transformerProperties | async" class="w-100 container-fluid">
 
     <div class="property">
