--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,14 +3,14 @@
   <nav-bar></nav-bar>
   <div class="w-100 h-100 d-flex justify-content-around">
     <div class="d-flex flex-column left-panel p-0 h-100">
-      <channel-selector class="h-50 p-2"></channel-selector>
-      <transformer-selector class="h-50 p-2"></transformer-selector>
+      <channel-selector class="h-50 p-2 d-flex flex-column"></channel-selector>
+      <transformer-selector class="h-50 p-2 d-flex flex-column"></transformer-selector>
     </div>
     <div class="p-0 h-100 middle-panel w-100">
       <div class="scroll" [style.height]="ladderDiagramHeightPercentString">
         <ladder-diagram class="w-100" ></ladder-diagram>
       </div>
-      <div class="scroll information-panel p-2" mwlResizable
+      <div class="scroll information-panel p-2 d-flex flex-column" mwlResizable
            [enableGhostResize]="true"
            ghostElementPositioning="absolute"
            [resizeEdges]="{top: true}"
@@ -18,9 +18,9 @@
            (resizeStart)="onResizeStart($event)"
            [validateResize]="onValidateResize"
            [style.height]="informationHeightPercentString">
-        <information class="w-100 p-2 scroll"></information>
+        <information class="w-100 d-flex flex-column"></information>
       </div>
     </div>
-    <transformer-property-selector class="p-2 right-panel"></transformer-property-selector>
+    <transformer-property-selector class="p-2 right-panel d-flex flex-column"></transformer-property-selector>
   </div>
 </div>
