--- a/src/app/widgets/transformer-selector/transformer-selector.component.html
+++ b/src/app/widgets/transformer-selector/transformer-selector.component.html
@@ -1,7 +1,6 @@
 <h4 class="unselectable">Analytics</h4>
-<hr>
 <div class="content h-100">
-  <ngb-accordion [closeOthers]="true">
+  <ngb-accordion>
     <ngb-panel *ngFor="let analyticsGroup of (analyticsByGroup | async)" [id]="analyticsGroup.groupName" [title]="analyticsGroup.groupName || 'Other'">
       <ng-template ngbPanelContent>
         <transformer-definition *ngFor="let analytic of analyticsGroup.analytics" [analytic]="analytic"></transformer-definition>
