Removing spacing between title and components

--- a/src/app/widgets/information/information.component.html
+++ b/src/app/widgets/information/information.component.html
@@ -1,5 +1,4 @@
-<h4>Information</h4>
-<hr>
+<h4>Documentation</h4>
 <div class="content h-100">
   <div [innerHTML]="transformerDocumentation | async"></div>
 </div>
