--- a/src/app/widgets/nav-bar/nav-bar.component.scss
+++ b/src/app/widgets/nav-bar/nav-bar.component.scss
@@ -22,6 +22,14 @@
   }
 }
 
+.navbar-brand {
+  margin-right: 0.5rem;
+}
+
+navbar-nav {
+  padding-left: 0.4rem;
+}
+
 .logo {
   margin-top: -.3em;
   margin-right: 0.3em;
