Adding channel properties and updating analytic properties

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,6 @@
         <information class="w-100 d-flex flex-column"></information>
       </div>
     </div>
-    <transformer-property-selector class="p-2 right-panel d-flex flex-column"></transformer-property-selector>
+    <property-selector class="p-2 right-panel d-flex flex-column"></property-selector>
   </div>
 </div>
