--- a/src/app/widgets/channel-property-selector/channel-property-selector.component.html
+++ b/src/app/widgets/channel-property-selector/channel-property-selector.component.html
@@ -1,5 +1,6 @@
 <div class="content h-100">
-  <div class="w-100 container-fluid">
+  <div class="w-100">
+    <h6>Channel Name</h6>
     <input class="form-control" type="text" [ngModel]="selectedChannelName | async" (ngModelChange)="selectedChannelName.next($event)"/>
   </div>
 </div>
