Now displays a warning if the user tries to close the tab / window when configuration changes haven't been saved Displays [Unsaved] in the navigation bar if the configuration contains changes which haven't been saved

--- a/src/app/widgets/nav-bar/nav-bar.component.html
+++ b/src/app/widgets/nav-bar/nav-bar.component.html
@@ -41,5 +41,6 @@
   </div>
   <div class="configurationTitle ellipsis">
     {{((dataService.hierarchy | async).name | async) || 'Untitled' }}
+    <span class="unsaved pl-2" *ngIf="dataService.isModified()">[Unsaved]</span>
   </div>
 </nav>
