--- a/src/app/widgets/nav-bar/nav-bar.component.scss
+++ b/src/app/widgets/nav-bar/nav-bar.component.scss
@@ -30,6 +30,9 @@ navbar-nav {
   padding-left: 0.4rem;
 }
 
+.unsaved {
+  color: RGBA(255,255,255,0.5);
+}
 .logo {
   margin-top: -.3em;
   margin-right: 0.3em;
