--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,7 +17,7 @@
 
 .information-panel {
   border-top: 1px solid $gray-lighter;
-  background-color: $white;
+  background-color: $gray-lightest;
   z-index:999;
 }
 
