Adding autofocus to channel name

--- a/src/app/widgets/channel-property-selector/channel-property-selector.component.html
+++ b/src/app/widgets/channel-property-selector/channel-property-selector.component.html
@@ -1,6 +1,6 @@
 <div class="content h-100">
   <div class="w-100">
     <h6>Channel Name</h6>
-    <input class="form-control" type="text" [ngModel]="selectedChannelName | async" (ngModelChange)="selectedChannelName.next($event)"/>
+    <input class="form-control" type="text" [ngModel]="selectedChannelName | async" (ngModelChange)="selectedChannelName.next($event)" autofocus/>
   </div>
 </div>
