fixing dropshadow bug. Appears to be fixed by adding a slash or a dot to url path (can't use dot it is removed by precompiler)

--- a/src/app/widgets/dragoverlay/drag-overlay.component.scss
+++ b/src/app/widgets/dragoverlay/drag-overlay.component.scss
@@ -5,7 +5,7 @@ $transformer-color: saturate($brand-primary, 20%);
 * /deep/ {
   .transformer {
     fill: $transformer-color;
-    filter: url('#dropshadow');
+    filter: url('/#dropshadow');
 
     .channel-circle {
       stroke: $black;
