--- a/src/app/widgets/transformer-definition/transformer-definition.component.scss
+++ b/src/app/widgets/transformer-definition/transformer-definition.component.scss
@@ -5,7 +5,7 @@ $transformer-color: saturate($brand-primary, 20%);
 * /deep/ {
   .transformer {
     fill: $transformer-color;
-    filter: url('#dropshadow');
+    filter: url('/#dropshadow');
 
     .channel-circle {
       stroke: $black;
