Now centres the ladder diagram on first load

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
       <transformer-selector class="h-100 p-2 d-flex flex-column"></transformer-selector>
     </div>
     <div class="p-0 h-100 middle-panel w-100">
-      <div class="scroll" [style.height]="ladderDiagramHeightPercentString">
+      <div id="ladder-diagram-panel" class="scroll" [style.height]="ladderDiagramHeightPercentString">
         <ladder-diagram class="w-100" ></ladder-diagram>
       </div>
       <div class="scroll information-panel p-2 d-flex flex-column" mwlResizable
