Adding icon for unconnected channels

--- a/src/app/widgets/dragoverlay/drag-overlay.component.scss
+++ b/src/app/widgets/dragoverlay/drag-overlay.component.scss
@@ -20,4 +20,8 @@ $transformer-color: saturate($brand-primary, 20%);
       fill: black;
     }
   }
+
+  .channel-disconnected {
+    display: none;
+  }
 }
