standardising table formatting in docs panel

--- a/src/app/widgets/information/information.component.scss
+++ b/src/app/widgets/information/information.component.scss
@@ -8,4 +8,15 @@ h4 {
   overflow-y: auto;
   background-color: $white;
   border: 1px solid $gray-lighter;
+
+  /deep/ {
+    table {
+      td, th {
+        padding: 3px;
+      }
+      th {
+        background-color: #CCCCFF;
+      }
+    }
+  }
 }
