change drop target color on drag over

--- a/src/app/widgets/information/information.component.scss
+++ b/src/app/widgets/information/information.component.scss
@@ -15,7 +15,7 @@ h4 {
         padding: 3px;
       }
       th {
-        background-color: #CCCCFF;
+        background-color: desaturate(lighten($brand-primary, 20), 20);
       }
     }
   }
