animation of channels

--- a/src/app/widgets/ladder-diagram/ladder-diagram.component.html
+++ b/src/app/widgets/ladder-diagram/ladder-diagram.component.html
@@ -1,4 +1,4 @@
-<svg>
+<svg xmlns="http://www.w3.org/1999/html">
   <defs>
     <filter id="dropshadow">
       <feGaussianBlur in="SourceAlpha" stdDeviation="3"/>
@@ -8,5 +8,15 @@
       </feComponentTransfer>
       <feBlend mode="normal" in="SourceGraphic" />
     </filter>
+    <linearGradient id="flow-animation" x1="0" y1="0" x2="400px" y2="0" spreadMethod="reflect" gradientUnits="userSpaceOnUse">
+      <stop offset="0.05" stop-color="black"></stop>
+      <stop offset="0.25" stop-color="lightgray"></stop>
+      <stop offset="0.45" stop-color="black"></stop>
+      <stop offset="0.55" stop-color="black"></stop>
+      <stop offset="0.75" stop-color="lightgray"></stop>
+      <stop offset="0.95" stop-color="black"></stop>
+      <animate attributeName="x1" values="0;400px" dur="6s" repeatCount="indefinite"></animate>
+      <animate attributeName="x2" values="400px;800px" dur="6s" repeatCount="indefinite"></animate>
+    </linearGradient>
   </defs>
 </svg>
