tidying rendering in firefox by making drop shadow only on analytic background

--- a/src/app/widgets/dragoverlay/drag-overlay.component.scss
+++ b/src/app/widgets/dragoverlay/drag-overlay.component.scss
@@ -5,7 +5,10 @@ $transformer-color: saturate($brand-primary, 20%);
 * /deep/ {
   .transformer {
     fill: $transformer-color;
-    filter: url('/#dropshadow');
+
+    .transformer-bg {
+      filter: url('/#dropshadow');
+    }
 
     .channel-circle {
       stroke: $black;
