--- a/src/app/widgets/nav-bar/nav-bar.component.html
+++ b/src/app/widgets/nav-bar/nav-bar.component.html
@@ -33,12 +33,17 @@
             <button class="dropdown-item" *ngFor="let version of metadataVersions | async" [ngClass]="{'selected': isSelectedVersion(version)}" (click)="metadataVersionChange(version)">{{version}}</button>
 
             <div class="dropdown-divider"></div>
-            <h6 class="dropdown-header">Custom Analytics</h6>
-            <div class="px-2 w-100"><button class="btn btn-secondary w-100" (click)="loadAnalytics()">Load Analytics...</button></div>
+            <h6 class="dropdown-header">Custom Analytic</h6>
+            <div class="px-2 w-100"><button class="btn btn-secondary w-100" (click)="loadAnalytics()">Load...</button></div>
             <div class="dropdown-divider"></div>
             <h6 class="dropdown-header">Metadata</h6>
-            <div class="px-2 w-100"><button class="btn btn-secondary w-100" (click)="importMetadata()">Import Metadata...</button></div>
-            <div class="px-2 w-100"><button class="btn btn-secondary w-100" (click)="exportMetadata()">Export Metadata...</button></div>
+
+            <div class="px-2 w-100 pb-1">
+              <button class="btn btn-secondary w-100" (click)="importMetadata()">Import...</button>
+            </div>
+            <div class="px-2 w-100">
+              <button class="btn btn-secondary w-100" (click)="exportMetadata()">Export...</button>
+            </div>
           </div>
         </div>
       </div>
