Delete Analytics in the ladder using the 'del' key

--- a/src/app/widgets/ladder-diagram/ladder-diagram.component.scss
+++ b/src/app/widgets/ladder-diagram/ladder-diagram.component.scss
@@ -20,6 +20,8 @@ $transformer-color: saturate($brand-primary, 20%);
     }
 
     &.selected {
+      outline: none;
+
       .transformer-bg {
         stroke: $orange;
         stroke-width: 3;
