--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="d-flex flex-column h-100">
+  <sandbox-eval></sandbox-eval>
   <drag-overlay></drag-overlay>
   <nav-bar></nav-bar>
   <div class="w-100 h-100 d-flex justify-content-around">
