--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
   <div class="w-100 h-100 d-flex justify-content-around">
     <transformer-selector class="left-panel h-100 p-2 d-flex flex-column"></transformer-selector>
     <div class="p-0 h-100 middle-panel w-100">
+      <history></history>
       <div id="ladder-diagram-panel" class="scroll" [style.height]="ladderDiagramHeightPercentString">
         <ladder-diagram class="w-100" ></ladder-diagram>
       </div>
