Changed DataService modified property to BehaviorSubject<boolean>

--- a/src/app/widgets/nav-bar/nav-bar.component.html
+++ b/src/app/widgets/nav-bar/nav-bar.component.html
@@ -51,6 +51,6 @@
   </div>
   <div class="configurationTitle ellipsis">
     {{((dataService.hierarchy | async).name | async) || 'Untitled' }}
-    <span class="unsaved pl-2" *ngIf="dataService.isModified()">[Unsaved]</span>
+    <span class="unsaved pl-2" *ngIf="(dataService.isModified()| async)">[Unsaved]</span>
   </div>
 </nav>
