--- a/src/app/widgets/nav-bar/nav-bar.component.html
+++ b/src/app/widgets/nav-bar/nav-bar.component.html
@@ -6,20 +6,20 @@
   <a class="navbar-brand" id="navbar-title" href="javascript:void(0)">Analytics Builder</a>
   <sup>Beta</sup>
   <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse">
-    <ul class="navbar-nav text-uppercase mr-auto">
-      <li class="nav-item">
+    <ul class="navbar-nav  mr-auto">
+      <li class="nav-item text-uppercase">
           <a class="nav-link" href="javascript:void(0)" (click)="newConfig()">New</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item text-uppercase">
         <a class="nav-link" href="javascript:void(0)" (click)="loadConfig()">Load</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item text-uppercase">
           <a class="nav-link" href="javascript:void(0)" (click)="openSaveConfigurationDialog()">Save</a>
       </li>
-      <li class="nav-item examples" ngbDropdown>
-        <a class="nav-link" href="javascript:void(0)" ngbDropdownToggle>Samples</a>
+      <li *ngIf="(configurations | async).size > 0" class="nav-item examples" ngbDropdown>
+        <a class="nav-link text-uppercase" href="javascript:void(0)" ngbDropdownToggle>Samples</a>
         <div class="dropdown-menu">
-          <a *ngFor="let configuration of configurations | async" class="dropdown-item ellipsis" href="javascript:void(0)" (click)="onConfigurationClick(configuration)">{{configuration.name | async}}</a>
+          <a *ngFor="let configuration of configurations | async" class="dropdown-item ellipsis" href="javascript:void(0)" (click)="onConfigurationClick(configuration)">{{configuration.name}}</a>
         </div>
       </li>
     </ul>
