Removed the ./ from the dropshadow and flow-animation

--- a/src/app/widgets/dragoverlay/drag-overlay.component.scss
+++ b/src/app/widgets/dragoverlay/drag-overlay.component.scss
@@ -7,7 +7,7 @@ $transformer-color: saturate($brand-primary, 20%);
     fill: $transformer-color;
 
     .transformer-bg {
-      filter: url('./#dropshadow');
+      filter: url('#dropshadow');
     }
 
     .channel-circle {
